# mzigo

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  contract-gate.yml
contracts/examples/: payments.transactions.yaml
docs/architecture/: README.md
docs/architecture/adr/: ADR-000-template.md  ADR-001-plane-separation.md  ADR-002-language-selection.md
examples/producer-python/: produce.py
infra/docker/: docker-compose.yml
infra/docker/kafka/: create-topics.sh
infra/docker/otel/: config.yaml
infra/docker/postgres/: init.sql
infra/docker/prometheus/: prometheus.yml
infra/helm/: README.md
infra/helm/mzigo/: Chart.yaml  values.production.yaml.example  values.yaml
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/terraform/environments/: production.tfvars.example  staging.tfvars
sdk/python/: README.md  pyproject.toml
sdk/python/mzigo/: __init__.py  _http.py  async_producer.py  contract.py  exceptions.py  producer.py  types.py
sdk/python/tests/: test_contract.py  test_producer.py
services/analyzer/: Dockerfile  config.py  main.py  metrics.py  pyproject.toml
services/analyzer/analyzer/: graph.py  report.py  scorer.py  traversal.py
services/analyzer/api/: handler.py
services/analyzer/tests/: test_scorer.py  test_traversal.py
services/catalog/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
services/catalog/app/: globals.css  layout.tsx  page.tsx
services/catalog/components/: BlastRadiusReport.tsx  ContractCard.tsx  ImpactBadge.tsx
services/catalog/lib/: api.ts  types.ts
services/contracts/: Dockerfile  go.mod
services/gateway/: Dockerfile  go.mod
services/lineage/: Dockerfile  config.py  main.py  metrics.py  pyproject.toml
services/lineage/lineage/: consumer.py  edge_store.py  emitter.py  extractor.py
services/lineage/tests/: test_emitter.py  test_extractor.py
services/masking/: Dockerfile  go.mod
(+65 files in other folders)
