[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mzigo-analyzer"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "httpx==0.27.0",
    "networkx==3.2.1",
    "pydantic==2.6.1",
    "pydantic-settings==2.2.1",
    "structlog==24.1.0",
    "prometheus-client==0.20.0",
    "asyncpg==0.29.0",
    "tenacity==8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.2",
    "pytest-asyncio==0.23.5",
    "ruff==0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
